fix action button z-order / covered by curtain layer issue

--- a/app/styles/10_cinema.sass
+++ b/app/styles/10_cinema.sass
@@ -78,6 +78,8 @@
   background-image: url(/img/net.png)
 
 #action-buttons
+  position: relative
+  z-index: 5
   text-align: center
   .button
     padding: 7px 15px
